<resources>
    <!-- Nombre de la aplicación -->
    <string name="app_name" translatable="false">Cutter App</string>

    <!-- Alertas o mensajes -->
    <string name="msg_error_last_name">The last name must have at least two letters.</string>
    <string name="db_version_select">Select the alphabet to use</string>
    <string name="abc_normal">Normal Alphabet</string>


    <!-- Inferfaz gráfica -->
    <string name="empty_text">Hello,</string>
    <string name="empty_text_2">the number used will appear here.</string>
    <string name="etx_name">Name</string>
    <string name="etx_last_name">Last Name</string>
    <string name="bt_search">SEARCH</string>
    <string name="descripcion_imagen" translatable="false">Logo app</string>

    <!-- Restricciones -->
    <string name="char_allowed" translatable="false">qwertzuiopasdfghjklyxcvbnmñQWERTYUIOPASDFGHJKLZXCVBNMÑáéíóúüÁÉÍÓÚÜ-</string>

    <!---Creditos y licencias-->
    <string name="credit"><u>About</u></string>
    <string name="titulo_faq"><b>Frequently asked questions (F.A.Q)</b></string>
    <string name="faqs"><![CDATA[<b>&#x25FC; What accented letters or characters does the application accept?</b><br/><br/>Currently the application only accepts Spanish / English alphabet characters and the following accents: Á É Í Ó Ú Ü. In future updates the capacity will be expanded.<br/><br/><b>&#x25FC; How do I submit a suggestion or report a problem with the application?</b><br/><br/>You can send suggestions or report a problem to the following email: <a href="mailto:contactfonsecasoftware@gmail.com">contactfonsecasoftware@gmail.com</a>]]></string>
    <string name="title_activity_licenses">About</string>
    <string name="agradecimiento"><![CDATA[Design and development: Tyron Fonseca – 2026<br/><a href="https://github.com/tyronfonseca/cutterapp_android">https://github.com/tyronfonseca/cutterapp_android</a> <br/><br/>Icon and other UI aspects: Omar Zamora G. <br/><a href="https://www.instagram.com/crea.cr/">https://www.instagram.com/crea.cr/</a>]]></string>

    <string name="app_info_title">App Information</string>
    <string name="library_title">Used Libraries</string>
    <string name="opencsv_license" translatable="false"><![CDATA[OpenCSV 5.12 Copyright 2025 Glen Smith and Scott Conway<br/>Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>

    <!--Kotlin-->



    <!--OpenCSV-->


    <string name="msg_error">Write the Last Name and Name.</string>
    <string name="change_version">Change</string>
    <string name="close">Close</string>
    <string name="btn_history_desc">History</string>
    <string name="btn_text_recognition_desc">Text Recognition</string>
    <string name="empty_history">Your queries will be displayed here</string>
    <string name="no_results_found">No results found</string>
    <string name="delete_history_title">Delete history</string>
    <string name="delete_history_text">Are you sure you want to delete ALL your cutter search history? This action cannot be undone.</string>
    <string name="delete_history_btn_delete">Delete All</string>
    <string name="cancel">Cancel</string>
    <string name="search_history_title">Search history</string>
    <string name="go_back_btn">Go Back</string>
    <string name="menu">Menu</string>
    <string name="menu_delete_all_search_history">Delete all search history</string>
    <string name="search_placeholder">Calling number, date or name…</string>
    <string name="text_recognition_title_alternative">Touch the squares to select the text</string>
    <string name="text_recognition_title">Scan Text</string>
    <string name="reset">Reset</string>
    <string name="scan_btn">Scan text on image</string>
    <string name="grant_camera_access">Grant camera access permission</string>
    <string name="text_selected_title">Modify the text if needed</string>
    <string name="use_this">Use this</string>
    <string name="delete">Delete</string>
    <string name="selected_items">Selected</string>
    <string name="clean">Clear</string>
    <string name="menu_export_csv">Export to CSV</string>
    <string name="export_success">Exported to: %s</string>
    <string name="export_error">Export failed: %s</string>
    <string name="error_exporting_csv">Error exporting CSV.</string>
    <string name="share_csv">Share CSV</string>
    <string name="delete_specific_title">Are you sure you want to delete the selected items?</string>

    <!-- Tutorial Text Recognition -->
    <string name="tutorial_btn">Help</string>
    <string name="tutorial_step1_title">Scan Text</string>
    <string name="tutorial_step1_text">Focus the text with the camera and press the scan button.</string>
    <string name="tutorial_step2_title">Select Result</string>
    <string name="tutorial_step2_text">Tap on the highlighted text boxes to select what you need.</string>
    <string name="tutorial_step3_title">Review and edit the scanned text before proceeding</string>

    <string name="tutorial_finish_btn">Got it!</string>
    <string name="tutorial_step3_text">The app treats the final word as the last name, remove any unnecessary spaces.</string>

</resources>